 - Fix for bug 31304: Suppress warning if "pop3.refreshrate" property is missing. Silently use fall-back value
 - Fix for bug 30848: Properly recognize & transmit an S/MIME encrypted mail

* 2014-03-13 - thorben.betten@open-xchange.com

 - Fix for bug 31555: Also check standard folders' subscribed status in case SPECIAL-USE capability is supported by IMAP server
 
 * 2014-03-07 - jan.bauerdick@open-xchange.com

 - Fix for bug 31335: Fixed/Added missing dependencies on update tasks

* 2014-03-07 - marcus.klein@open-xchange.com

 - Fix for bug 31154: Necessary Ant tasks for our build system have not be available by default on Debian Squeeze but on Wheezy. Adding an
   additional JAR to the build call on Debian Squeeze systems when using CDBS for building.

* 2014-03-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 31391: Use dynamically registered key and certificate providers for cloud-based push notifications
 - Fix for bug 30369: Replaced equinox event admin with multithreaded implementation from apache felix project, introduced background
                      event processing for time-consuming handlers

* 2014-03-03 - dennis.sieben@open-xchange.com

 - Fix for bug 31329: Multi-line calculation has now also been added for PGP_ENCRYPT commands

* 2014-02-28 - marcus.klein@open-xchange.com

 - Fix for bug 23141: Remember parsed uploaded and temporarily stored files even if too much form fields are sent in the upload.

* 2014-02-25 - martin.herfurth@open-xchange.com

 - Fix for bug 31191: Fixed erroneous permission check.

* 2014-02-25 - thorben.betten@open-xchange.com

 - Fix for bug 31252: Put error arguments into "error_params" field for compatibility reasons
 - Fix for bug 31287: Do not apply black-list on provisioning calls
 - Fix for bug 30969: Fully leverage from folder cache within folder layer, do not use a custom one in IMAP bundle

* 2014-02-24 - tobias.friedrich@open-xchange.com
